--- a/hw3/hw3/hw3/styles.css
+++ b/hw3/hw3/hw3/styles.css
@@ -1,7 +1,7 @@
 
 .country {
     stroke: #f7f7f7;
-    fill: darkblue; 
+    
     stroke-opacity: 0.1;
     
 
@@ -9,6 +9,7 @@
 
 .sphere {
     fill:  #f7f7f7;
+    fill: c
   }
 
 .country:hover{
