--- a/hw3/hw3/hw3/styles.css
+++ b/hw3/hw3/hw3/styles.css
@@ -12,10 +12,15 @@
     fill: c
   }
 
-.country:hover{
+/*.country:hover{
     fill: red; 
-}
+}*/
 
+.rect:hover{
+
+    fill:red;
+
+}
 
 .legend-element {
     width: 15px;
@@ -64,7 +69,7 @@
 .grat {
     stroke: grey;
     stroke-width: 1px;
-    opacity: .2;
+    opacity: .1;
 }
 
 @font-face {
